@@ -20,6 +20,6 @@ div.intro {
   }
 }
 
-aside.active ~ main div.intro {
+aside.active:not(.off) ~ main div.intro {
   margin-left: $logo-left-distance - $standard-margin + $base-padding;
 }
